--- a/docs/html/_sass/_subnav.scss
+++ b/docs/html/_sass/_subnav.scss
@@ -20,8 +20,8 @@
 }
 
 @include color-mode(dark) {
-    .main .content-container .subnav ul li a {
-        color: $gray-500 !important;
+    .main .content-container .subnav li a {
+        color: $gray-400 !important;
         &:hover, &:focus {
             color: $gray-300 !important;
         }
